docs: add infomaion on htmp and add styles on css

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
       <h1>
         Maksim Kandaratsiuk
       </h1>
-      <h2 class="unbold">
+      <p class="unbold">
         Frond-end developer
-      </h2>
+      </p>
       </header>
   </header>
 
 
   <section class="margin">
-    <div>
+    <div class="line">
       <h2>
         About me
       </h2>
@@ -32,7 +32,7 @@
   
 
   
-    <div>
+    <div class="line">
       <h2>
         Studies
       </h2>
@@ -50,44 +50,40 @@
       <p>
         JS
       </p>
-      <div class="rating-mini">
-        <span class="active"></span>	
-        <span class="active"></span>    
-        <span class="active"></span>  
-        <span></span>    
-        <span></span>
+      <div class="star">
+        <div class="starcss"></div>
+        <div class="starcss"></div>
+        <div class="starcss"></div>
+        <div class="starempty"></div>
+        <div class="starempty"></div>
       </div>
 
       <p>
         HTML
       </p>
-      <div class="rating-mini">
-        <span class="active"></span>	
-        <span class="active"></span>    
-        <span class="active"></span>  
-        <span></span>    
-        <span></span>
-      </div>
+      <div class="star">
+        <div class="starcss"></div>
+        <div class="starcss"></div>
+        <div class="starcss"></div>
+        <div class="starcss"></div>
+        <div class="starcss"></div>
+     </div>
 
       <p>
         CSS
       </p>
-      <div class="rating-mini">
-        <span class="active"></span>	
-        <span class="active"></span>    
-        <span class="active"></span>  
-        <span></span>    
-        <span></span>
+      <div class="star">
+         <div class="starcss"></div>
+         <div class="starcss"></div>
+         <div class="starcss"></div>
+         <div class="starcss"></div>
+         <div class="starempty"></div>
       </div>
-    </div>
   </section>
 </div>
   <aside class="aside">
-    <div>
       <img class="avatar" src="/rsschool-cv/chelovechek_4158.jpg" alt="avatar">
-    </div>
-
-    <div>
+    <div class="lineaside">
       <h2>
         Education
       </h2>
@@ -99,7 +95,7 @@
       </p>
     </div>
 
-    <div>
+    <div class="lineaside">
       <h2>
         Hobby
       </h2>
@@ -111,16 +107,16 @@
     </div>
 
     <footer>
-      <div>
+      <div class="lineaside">
         <h3>
           Contacts
         </h3>
         <p><a href="https//:t.me/Waul888">Telegram</a></p>
         <p><a href="https://www.instagram.com/maxkondrat8">Instagram</a></p>
-        <p>Email: maximkondrtyuk@gmail.com</p>
+        <p>Email: maximkondratyuk@gmail.com</p>
       </div>
     </footer>
   </aside>
-</?div>
+</div>
 </body>
 </html>
