docs: add background on body

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="index.css">
   <title>CV</title>
 </head>
-<body>
+<body class="background">
 <div class="alignment">
   <div>
     <header class="head">
