docs: add fonts and width body 75%

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="index.css">
+<link rel="icon" href="./assets/img/chelovechek_4158.ico">
   <title>CV</title>
 </head>
-<body class="background">
+<body>
 <div class="alignment">
   <div>
     <header class="head">
@@ -82,7 +84,7 @@
   </section>
 </div>
   <aside class="aside">
-      <img class="avatar" src="/rsschool-cv/chelovechek_4158.jpg" alt="avatar">
+      <img class="avatar" src="./assets/img/chelovechek_4158.jpg" alt="avatar">
     <div class="lineaside">
       <h2>
         Education
