docs: changes cv

--- a/index.html
+++ b/index.html
@@ -8,24 +8,28 @@
 <link rel="icon" href="./assets/img/chelovechek_4158.ico">
   <title>CV</title>
 </head>
-<body>
-<div class="alignment">
-  <div>
-    <header class="head">
-      <h1>
-        Maksim Kandaratsiuk
-      </h1>
-      <p class="unbold">
-        Frond-end developer
-      </p>
+<body class="body">
+    <header class="header">
+      <nav class="nav">
+        <p class="Maksim">Maksim Kandaratsiuk</p>
+      </nav>
+      <ul class="ul">
+        <li><a href="#Aboutme">About me</a></li>
+        <li><a href="#Studies">Studies</a></li>
+        <li><a href="#Skills">Skills</a></li>
+        <li><a href="#Education">Education</a></li>
+        <li><a href="#Hobby">Hobby</a></li>
+        <li><a href="#Contacts">Contacts</a></li>
+      </ul>
       </header>
   </header>
-
-
+<div class="alignment">
+<main>
   <section class="margin">
     <div class="line">
-      <h2>
+      <h2><a name="Aboutme">
         About me
+      </a>
       </h2>
       <p>
         My name Maksim Kandaratsiuk. I am 21 years old. I live in Belarus. I am studying on Frond-end developer and I want work on and I want to develop in this direction.
@@ -35,8 +39,9 @@
 
   
     <div class="line">
-      <h2>
+      <h2><a name="Studies">
         Studies
+      </a>
       </h2>
       <p>
         in 2018 I entered Vitebsk with a degree in software. There I mastered the basic skills of css html JS and c++. Then I decided to learn JS on my own and found The RollingScopes courses.
@@ -46,8 +51,9 @@
 
   
     <div>
-      <h2>
+      <h2><a name="Skills">
         Skills
+      </a>
       </h2>
       <p>
         JS
@@ -82,12 +88,13 @@
          <div class="starempty"></div>
       </div>
   </section>
-</div>
+  </main>
   <aside class="aside">
       <img class="avatar" src="./assets/img/chelovechek_4158.jpg" alt="avatar">
     <div class="lineaside">
-      <h2>
+      <h2><a name="Education">
         Education
+      </a>
       </h2>
       <p>
         Vitebsk branch Belarusian State Academy of Telecommunications
@@ -97,28 +104,27 @@
       </p>
     </div>
 
-    <div class="lineaside">
-      <h2>
+    <div class="hobby">
+      <h2><a name="Hobby">
         Hobby
+      </a>
       </h2>
-      <ul>
+      <ul id="ul">
         <li>Football</li>
         <li>Computer games</li>
         <li>Walk whit friend</li>
       </ul>
     </div>
-
-    <footer>
-      <div class="lineaside">
-        <h3>
-          Contacts
-        </h3>
-        <p><a href="https//:t.me/Waul888">Telegram</a></p>
-        <p><a href="https://www.instagram.com/maxkondrat8">Instagram</a></p>
-        <p>Email: maximkondratyuk@gmail.com</p>
-      </div>
-    </footer>
   </aside>
 </div>
+<footer class="footer">
+  <a href="https://github.com/MaxBeen8"><img src="./assets/img/github.png" alt="" width="50px" height="50px"></a>
+    <ul class="ul"><a name="Contacts">
+       <li><a href="https//:t.me/Waul888">Telegram</a></li>
+       <li><a href="https://www.instagram.com/maxkondrat8">Instagram</a></li>
+       <li>Email: maximkondratyuk@gmail.com</li>
+      </a>
+    </ul>
+</footer>
 </body>
 </html>
