--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="index.css">
-  <link rel="icon" href="./assets/img/chelovechek_4158.ico">
-  <title>CV</title>
-</head>
-<body class="body">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
+    <link rel="icon" href="./assets/img/chelovechek_4158.ico">
+    <title>CV</title>
+  </head>
+  <body class="body">
     <header class="header">
       <nav class="nav">
         <p class="Maksim">Maksim Kandaratsiuk</p>
@@ -21,108 +21,83 @@
         <li><a href="#Contacts">Contacts</a></li>
       </ul>
     </header>
-<div class="alignment">
-<main>
-  <section class="margin">
-    <div class="line">
-      <h2><a name="Aboutme">
-        About me
-      </a>
-      </h2>
-      <p>
-        My name Maksim Kandaratsiuk. I am 21 years old. I live in Belarus. I am studying on Frond-end developer and I want work on and I want to develop in this direction.
-      </p>
+    <div class="alignment">
+      <main>
+        <section class="margin">
+          <div class="line">
+            <h2>
+              <a>About me</a>
+            </h2>
+            <p>
+              My name Maksim Kandaratsiuk. I am 21 years old. I live in Belarus. I am studying on Frond-end developer and I want work on and I want to develop in this direction.
+            </p>
+          </div>
+          <div class="line">
+            <h2>
+              <a>Studies</a>
+            </h2>
+            <p>
+            in 2018 I entered Vitebsk with a degree in software. There I mastered the basic skills of css html JS and c++. Then I decided to learn JS on my own and found The RollingScopes courses.
+            </p>
+          </div>
+          <div>
+            <h2>
+              <a>Skills</a>
+            </h2>
+            <p>JS</p>
+            <div class="star">
+            <div class="starcss"></div>
+            <div class="starcss"></div>
+            <div class="starcss"></div>
+            <div class="starempty"></div>
+            <div class="starempty"></div>
+          </div>
+          <p>HTML</p>
+          <div class="star">
+            <div class="starcss"></div>
+            <div class="starcss"></div>
+            <div class="starcss"></div>
+            <div class="starcss"></div>
+            <div class="starcss"></div>
+          </div>
+          <p>CSS</p>
+          <div class="star">
+            <div class="starcss"></div>
+            <div class="starcss"></div>
+            <div class="starcss"></div>
+            <div class="starcss"></div>
+            <div class="starempty"></div>
+          </div>
+        </section>
+      </main>
+      <aside class="aside">
+        <img class="avatar" src="./assets/img/chelovechek_4158.jpg" alt="avatar">
+        <div class="lineaside">
+          <h2>
+            <a>Education</a>
+          </h2>
+          <p>Vitebsk branch Belarusian State Academy of Telecommunications</p>
+          <p>2017-2021</p>
+        </div>
+        <div class="hobby">
+          <h2>
+            <a>Hobby</a>
+          </h2>
+          <ul id="ul">
+            <li>Football</li>
+            <li>Computer games</li>
+            <li>Walk whit friend</li>
+          </ul>
+        </div>
+      </aside>
     </div>
-  
-
-  
-    <div class="line">
-      <h2><a name="Studies">
-        Studies
-      </a>
-      </h2>
-      <p>
-        in 2018 I entered Vitebsk with a degree in software. There I mastered the basic skills of css html JS and c++. Then I decided to learn JS on my own and found The RollingScopes courses.
-      </p>
-    </div>
-  
-
-  
-    <div>
-      <h2><a name="Skills">
-        Skills
-      </a>
-      </h2>
-      <p>
-        JS
-      </p>
-      <div class="star">
-        <div class="starcss"></div>
-        <div class="starcss"></div>
-        <div class="starcss"></div>
-        <div class="starempty"></div>
-        <div class="starempty"></div>
-      </div>
-
-      <p>
-        HTML
-      </p>
-      <div class="star">
-        <div class="starcss"></div>
-        <div class="starcss"></div>
-        <div class="starcss"></div>
-        <div class="starcss"></div>
-        <div class="starcss"></div>
-     </div>
-
-      <p>
-        CSS
-      </p>
-      <div class="star">
-         <div class="starcss"></div>
-         <div class="starcss"></div>
-         <div class="starcss"></div>
-         <div class="starcss"></div>
-         <div class="starempty"></div>
-      </div>
-  </section>
-  </main>
-  <aside class="aside">
-      <img class="avatar" src="./assets/img/chelovechek_4158.jpg" alt="avatar">
-    <div class="lineaside">
-      <h2><a name="Education">
-        Education
-      </a>
-      </h2>
-      <p>
-        Vitebsk branch Belarusian State Academy of Telecommunications
-      </p>
-      <p>
-        2017-2021
-      </p>
-    </div>
-
-    <div class="hobby">
-      <h2><a name="Hobby">
-        Hobby
-      </a>
-      </h2>
-      <ul id="ul">
-        <li>Football</li>
-        <li>Computer games</li>
-        <li>Walk whit friend</li>
+    <footer class="footer">
+      <a href="https://github.com/MaxBeen8"><img src="./assets/img/github.png" alt="" width="50px" height="50px"></a>
+      <ul class="ul">
+        <li><a href="https//:t.me/Waul888">Telegram</a></li>
+        <li><a href="https://www.instagram.com/maxkondrat8">Instagram</a></li>
+        <li>Email: maximkondratyuk@gmail.com</li>
       </ul>
-    </div>
-  </aside>
-</div>
-<footer class="footer">
-  <a href="https://github.com/MaxBeen8"><img src="./assets/img/github.png" alt="" width="50px" height="50px"></a>
-    <ul class="ul"><a name="Contacts">
-       <li><a href="https//:t.me/Waul888">Telegram</a></li>
-       <li><a href="https://www.instagram.com/maxkondrat8">Instagram</a></li>
-       <li>Email: maximkondratyuk@gmail.com</li>
-      </a>
-    </ul>
-</footer>
-</body>
+    </footer>
+  </body>
 </html>
