--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       </aside>
     </div>
     <footer class="footer">
-      <a href="https://github.com/MaxBeen8"><img src="./assets/img/github.png" alt="" width="50px" height="50px"></a>
+      <img src="./assets/img/github.png" alt="" width="50px" height="50px">
       <ul class="ul">
         <li><a href="https//:t.me/Waul888">Telegram</a></li>
         <li><a href="https://www.instagram.com/maxkondrat8">Instagram</a></li>
